# wazuh-agent

etc/config/: wazuh-agent.yml
src/: vcpkg.json
src/agent/centralized_configuration/: CMakeLists.txt
src/agent/centralized_configuration/src/: centralized_configuration.cpp
src/agent/communicator/include/: communicator.hpp  http_client.hpp  ihttp_client.hpp
src/agent/communicator/src/: communicator.cpp  http_client.cpp
src/agent/configuration_parser/include/: configuration_parser.hpp
src/agent/configuration_parser/src/: configuration_parser.cpp
src/agent/include/: agent.hpp
src/agent/src/: agent.cpp  message_queue_utils.cpp  message_queue_utils.hpp
src/agent/tests/: agent_registration_test.cpp
src/agent/testtool/mock_server/: mock_server.py
src/cmake/: config.cmake
src/common/: CMakeLists.txt
src/common/config/include/: config.h.in
src/common/signal_dispatcher/: CMakeLists.txt
src/common/signal_dispatcher/include/: signal_dispatcher.hpp
src/common/signal_dispatcher/src/: signal_dispatcher.cpp
src/common/signal_dispatcher/tests/: CMakeLists.txt  signal_dispatcher_test.cpp
src/modules/inventory/: CMakeLists.txt
src/modules/inventory/include/: inventory.hpp
src/modules/inventory/src/: inventory.cpp  inventoryImp.cpp
src/modules/logcollector/: CMakeLists.txt
src/modules/logcollector/include/: logcollector.hpp
src/modules/logcollector/src/: file_reader.cpp  logcollector.cpp
